[package]
name = "rtss"
version = "0.2.0"
authors = ["eukaryote <sapientdust+github@gmail.com>"]

[lib]
name = "rtss"
path = "src/lib.rs"

[dependencies]
rand = "0.3"
sodiumoxide = "0.0.14"
rustc-serialize = "0.3"


[dependencies.clap]
version = "2"
default-features = false

features = ["wrap_help", "color"]
