[package]
name = "rtss"
version = "0.3.0"
authors = ["eukaryote <sapientdust+github@gmail.com>"]

[lib]
name = "rtss"
path = "src/lib.rs"

[dependencies]
rand = "0.6.1"
sodiumoxide = "0.2.0"
hex = "0.3.2"

[dependencies.clap]
version = "2"
default-features = false

features = ["wrap_help", "color"]
